# STT

./: .gitignore  README.md  SpeechToText.spec  pyproject.toml  requirements.txt
installer/: __init__.py  setup.py
scripts/: build.ps1
speech_to_text_app/: __init__.py  __main__.py  gui.py  hardware.py  jobs.py  media.py  profiles.py  runtime.py  transcriber.py  web_upload.py  webapp.py  workflow.py
tests/: test_gui_helpers.py  test_hardware.py  test_installer_setup.py  test_media.py  test_profiles.py  test_runtime.py  test_transcriber.py  test_webapp_jobs.py  test_workflow.py
